# Work_Project

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
QLoRA/: train_qlora_elderly_care.yaml
docs/note/: neo4j.md
eval/build_dataset/: build_hallucination.py  export_chunks.py  generate_questions.py
eval/report/: generate_report.py
eval/run_eval/: eval_faithfulness.py  eval_intent.py  eval_parallel.py  eval_rag_retrieval.py
scripts/DashScope/: example.py
scripts/agent/: demo_agent.py  demo_hitl.py  demo_parallel_hitl.py
scripts/file_extract/: extract_pdf_2_md.py  md_clean.py
scripts/knowledge_graph/: 1_neo4j_extract_relation_subject.py  2_md_split_chunks.py  4_entity_aligner.py  5_import_to_neo4j.py  neo4j_extract_relation_subject.py  prompt_triplet_extract.yaml  triplet_extract.py
scripts/perception/: test_perception_router.py
scripts/rag/: build_entity_index.py  demo_rag_pipeline.py
scripts/vector_database/file_chunk/: file_chunk.py
scripts/vector_database/huatuo/: huatuo_ingestion.py
scripts/vector_database/medical_knowledge_base/: database_create.py
src/silver_pilot/: config.py
src/silver_pilot/agent/: README.md  bootstrap.py  graph.py  llm.py  state.py
src/silver_pilot/agent/memory/: README.md  __init__.py  summarizer.py  user_profile.py
src/silver_pilot/agent/nodes/: README.md  chat_agent.py  device_agent.py  emergency_agent.py  helpers.py  medical_agent.py  memory_writer.py  output_guard.py  perception.py  perception_router.py  response_synthesizer.py  supervisor.py
src/silver_pilot/agent/tools/: README.md  __init__.py
src/silver_pilot/dao/: Neo4j_ETL_manager.py  Neo4j_manager.py  README.md  __init__.py  milvus_manager.py
src/silver_pilot/dao/database/: __init__.py  milvus_manager.py  neo4j_manager.py
src/silver_pilot/perception/: README.md  __init__.py  audio.py  embedder.py  vision.py  voice.py
src/silver_pilot/prompts/: README.md  __init__.py  prompt_manager.py
src/silver_pilot/prompts/templates/: example.yaml  query_process.yaml
src/silver_pilot/prompts/templates/agent/: chat_generate.yaml  device_parse.yaml  emergency_respond.yaml  faithfulness_check.yaml  medical_generate.yaml  profile_extract.yaml  supervisor_classify.yaml
src/silver_pilot/prompts/templates/rag/: context_compress.yaml
src/silver_pilot/rag/: README.md  __init__.py  chunk_builder.py  ingestor.py
src/silver_pilot/rag/chunker/: README.md  chunker_base.py  excel_chunker.py  markdown_chunker.py  unified_chunker.py
src/silver_pilot/rag/retriever/: README.md  __init__.py  community_builder.py  context_builder.py  entity_linker.py  graph_models.py  graph_retriever.py  models.py  path_reasoner.py  pipeline.py  query_processor.py  reranker.py  vector_retriever.py
src/silver_pilot/review/: __init__.py  commit_review.py
src/silver_pilot/server/: README.md  __init__.py  app.py  commit_review.py  models.py  session_store.py
src/silver_pilot/tools/MCP/: __init__.py  mcp_client.py  weather_server.py
src/silver_pilot/tools/document/: README.md  __init__.py  excel_parser.py  markdown_convert_pipeline.py  md_cleaner.py  mineru.py
src/silver_pilot/tools/document/cleaner/: __init__.py  md_cleaner.py
src/silver_pilot/tools/document/converter/: __init__.py  mineru_converter.py
src/silver_pilot/tools/document/core/: __init__.py  pipeline_base.py
src/silver_pilot/tools/document/parser/: __init__.py  excel_parser.py
src/silver_pilot/utils/: __init__.py  log.py
static/: api-connector.js  index.html  pipeline-ordering.js
tests/: test_commit_review.py
tests/agent/: test_parallel_regression.py
tests/frontend/: test_pipeline_ordering.py
