[project]
name = "work-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dashscope>=1.25.11",
    "datasets>=4.6.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "flagembedding>=1.3.5",
    "graspologic>=3.3.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.7",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "mcp>=1.27.0",
    "neo4j>=6.1.0",
    "networkx>=3.6.1",
    "numba>=0.63.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pymilvus>=2.6.8",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "regex>=2026.1.15",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "transformers==4.57.6",
    "types-pyyaml>=6.0.12.20250915",
    "unstructured[pdf]==0.18.31",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = ["mypy>=1.19.1", "pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.14.14"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silver_pilot"]

# --- Ruff 配置 ---
[tool.ruff]
# 目标 Python 版本
target-version = "py312"
# 行长限制
line-length = 100

[tool.ruff.lint]
# 启用规则组合：
# E: pycodestyle 错误
# F: Pyflakes (检测未使用的导入/变量)
# I: isort (自动排序 import)
# B: flake8-bugbear (发现潜在 Bug)
# UP: pyupgrade (自动升级旧语法，如 list() -> [])
# N: PEP8-naming
select = ["E", "F", "I", "B", "UP", "N"]
# 忽略的规则 (如有特殊需要可添加)
ignore = []

# 自动修复配置
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# 类似于 Black 的格式化风格
quote-style = "double"
indent-style = "space"

# --- Mypy 配置 ---
[tool.mypy]
python_version = "3.12"
files = ["src/"]
# exclude = ["file or dir"]
# warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true      # 函数必须有类型标注
ignore_missing_imports = true     # 忽略部分没有 stubs 的第三方库
disable_error_code = ["arg-type"]
# [[tool.mypy.overrides]]
# module = "src.silver_pilot.utils"
# disable_error_code = [""]

# --- Pytorch 配置 ---
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true                                # 必须设为 true，确保只有被明确指定的包才会从这里下载

# 告诉 uv 去这个专属源拉取 torch 及其生态包
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
